--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   "homepage": "https://github.com/AitezazAhmed/Backend#readme",
   "description": "",
   "dependencies": {
-    "cat-me": "^1.0.3"
+    "cat-me": "^1.0.3",
+    "ejs": "^3.1.10",
+    "express": "^4.21.2"
   }
 }
