--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "cat-me": "^1.0.3",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
+    "mongoose": "^8.12.1",
     "morgan": "^1.10.0"
   }
 }
