--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 CLOUD_NAME=dooefvdwa
 CLOUD_API_KEY=555146771535737
 CLOUD_API_SECRET=Bj6fg87kIlZ7iCI5j2WAkMXA04o
+secret = "Aitezaz!@#$%^&*";
 
 
 
